# watchlist

./: .gitignore  Cargo.toml  README.md  build.rs
src/: database.rs  datetime.rs  http.rs  main.rs  parsers.rs  sites.rs
src/tests/: datetime.rs  mod.rs  parsers.rs
translations/uk_UA/LC_MESSAGES/: watchlist.mo  watchlist.po
ui/: AddShowWindow.slint  ChangePictureDialog.slint  DateTimeWidget.slint  Global.slint  LineEdit.slint  ListElement.slint  LoadingWidget.slint  RadioButtonsGroup.slint  ScoreWidget.slint  Show.slint  ShowImageFullScreen.slint  ShowWindow.slint  SpinBox.slint  Structs.slint  TextEdit.slint  ToolBar.slint  Watchlist.slint  appwindow.slint
