[package]
name = "watchlist"
version = "0.1.0"
authors = ["zivit <zinc.vitaliy@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.38"
downloader = "0.2"
image = "0.25"
open = "5.1"
regex = "1.10"
rfd = "0.14.1"
slint = { version = "1.4", features=["gettext"] }
sqlite = "0.34"
webpage = "2.0"

[build-dependencies]
slint-build = "1.4"
